# pennysheet

./: .env.example  .env.local  .gitignore  Makefile  README.md  biome.jsonc  com.triluu.pennysheet.plist.template  package-lock.json  package.json  spacetime.json  spacetime.local.json
.github/workflows/: github-pages.yml  test.yml
pennysheet-auth/: README.md  app.py  auth.py  pyproject.toml
pennysheet-auth/templates/: index.html
pennysheet-auth/tests/: test_app.py  test_auth.py
pennysheet-backend/: Cargo.toml  README.md  rustfmt.toml
pennysheet-backend/domain/: Cargo.toml
pennysheet-backend/domain/src/: lib.rs  shared_schema.rs
pennysheet-backend/domain/src/aggregates/: mod.rs
pennysheet-backend/domain/src/commands/: budgets.rs  mod.rs  transactions.rs
pennysheet-backend/domain/src/errors/: mod.rs
pennysheet-backend/domain/src/event_injectors/: mod.rs
pennysheet-backend/domain/src/events/: budgets.rs  mod.rs  transactions.rs
pennysheet-backend/domain/src/process_managers/: budget.rs  mod.rs  transaction.rs
pennysheet-backend/gateway/: Cargo.toml
pennysheet-backend/gateway/src/: lib.rs
pennysheet-backend/gateway/src/authorization/: jwt.rs  mod.rs
pennysheet-backend/gateway/src/client/: enable_banking_client.rs  mod.rs
pennysheet-backend/gateway/src/errors/: mod.rs
pennysheet-backend/gateway/src/schema/: enable_banking_session.rs  mod.rs
pennysheet-backend/gateway/src/schema/enable_banking_api/: balance.rs  mod.rs  transaction.rs
pennysheet-backend/gateway/src/schema/enable_banking_response/: balance.rs  mod.rs
pennysheet-backend/infra/: Cargo.toml
pennysheet-backend/infra/src/: lib.rs
pennysheet-backend/infra/src/event_store/: mod.rs
pennysheet-backend/infra/src/projections/: expenses.rs  import_requests.rs  income.rs  mod.rs  monthly_budgets.rs  projector_states.rs  transactions.rs  weekly_budgets.rs
pennysheet-backend/infra/src/projectors/: budget_projector.rs  core_projector.rs  import_request_projector.rs  mod.rs
pennysheet-backend/infra/src/sessions/: mod.rs
pennysheet-backend/infra/src/user_settings/: mod.rs
pennysheet-backend/src/: background_jobs.rs  errors.rs  handlers.rs  main.rs  process_managers.rs  routes.rs  telemetry.rs
pennysheet-backend/src/api/: errors.rs  handlers.rs  mod.rs  routes.rs
pennysheet-backend/src/background_jobs/: budget.rs  mod.rs  projection.rs  transaction_import.rs
pennysheet-backend/src/domain/: aggregates.rs  errors.rs  mod.rs  projectors.rs
pennysheet-backend/src/domain/aggregates/: mod.rs
pennysheet-backend/src/domain/commands/: mod.rs  transactions.rs
pennysheet-backend/src/domain/errors/: mod.rs
pennysheet-backend/src/domain/event_injectors/: mod.rs
pennysheet-backend/src/domain/event_store/: mod.rs
pennysheet-backend/src/domain/events/: mod.rs  transactions.rs
pennysheet-backend/src/gateway/: mod.rs
pennysheet-backend/src/handlers/: budgets.rs  import_requests.rs  mod.rs  sessions.rs  transactions.rs  user_settings.rs
pennysheet-backend/src/infra/: mod.rs
pennysheet-backend/src/infra/event_store/: mod.rs
pennysheet-catalog/: README.md  eventcatalog.config.js
pennysheet-catalog/domains/Core/: index.mdx  ubiquitous-language.mdx
pennysheet-catalog/domains/Core/flows/TransactionImportFlow/: index.mdx
pennysheet-catalog/domains/Core/services/Aggregate/: index.mdx
pennysheet-catalog/domains/Core/services/Aggregate/commands/ResetBudget/: index.mdx
pennysheet-catalog/domains/Core/services/Aggregate/containers/EventStore/: index.mdx
pennysheet-catalog/domains/Core/services/Aggregate/events/BudgetReset/: index.mdx
pennysheet-catalog/domains/Core/services/Aggregate/events/TransactionImportContinued/: index.mdx
pennysheet-catalog/domains/Core/services/Aggregate/events/TransactionImportRetryRequested/: schema.json
pennysheet-catalog/domains/Core/services/CoreAggregate/: index.mdx
pennysheet-catalog/domains/Core/services/CoreAggregate/commands/RetryFailedTransactionsImport/: index.mdx
pennysheet-catalog/domains/Core/services/CoreAggregate/events/TransactionImportRetryRequested/: index.mdx
pennysheet-catalog/domains/Core/services/CoreEventInjector/: index.mdx
pennysheet-catalog/domains/Core/services/CoreProcessManager/: index.mdx
pennysheet-catalog/domains/Core/services/EnableBankingAPIGateway/: index.mdx
pennysheet-catalog/domains/Core/services/EnableBankingAPIGateway/commands/FetchTransactions/: index.mdx
pennysheet-catalog/domains/Core/services/EventInjector/: index.mdx
pennysheet-catalog/domains/Core/services/Notifier/: index.mdx
pennysheet-catalog/domains/Core/services/Projector/: index.mdx
pennysheet-catalog/domains/Core/services/Projector/containers/BudgetView/: index.mdx
pennysheet-catalog/domains/Core/services/Projector/containers/DashboardView/: index.mdx
pennysheet-catalog/domains/Core/services/TransactionProcessManager/: index.mdx
pennysheet-cli/: Cargo.toml
pennysheet-frontend/: .env.example  .ignore  README.md  biome.jsonc  eslint.config.js  index.html  package-lock.json  package.json
pennysheet-frontend/src/: App.tsx  index.css
pennysheet-frontend/src/api/: client.ts  utils.ts
pennysheet-frontend/src/api/endpoints/: budgets.ts  importRequests.ts  sessions.ts  transactions.ts  userSettings.ts
pennysheet-frontend/src/components/: BarPlot.tsx  BudgetCard.tsx  BudgetForm.tsx  BudgetSummary.tsx  FilterSideBar.tsx  Layout.tsx  PageHeader.tsx  RegexRulesSection.tsx  SessionsSection.tsx  SideNav.tsx  Table.tsx  Toast.tsx
pennysheet-frontend/src/hooks/: useBudgets.ts  useImportRequestsMetadata.ts  useSessions.ts  useTransactions.ts  useUserSettings.ts
pennysheet-frontend/src/pages/: Budgets.tsx  Details.tsx  Home.tsx  ImportRequests.tsx  User.tsx
spacetimedb/: Cargo.toml  package-lock.json  package.json
src/: App.tsx  main.tsx
src/module_bindings/: add_reducer.ts  index.ts  person_table.ts  say_hello_reducer.ts  types.ts
src/module_bindings/types/: procedures.ts  reducers.ts
src/pages/: HomePage.tsx  LoginPage.tsx  SpacetimeExamplePage.tsx
src/routes/: ProtectedRoute.tsx  index.ts
(+1 files in other folders)
