[project]
name = "pennysheet-auth"
version = "0.1.0"
description = "Pennysheet Authentication"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "flask",
    "httpx",
    "pyjwt",
    "cryptography",
    "requests>=2.34.2",
    "dotenv>=0.9.9",
]

[dependency-groups]
dev = ["pytest", "ruff>=0.15.14", "workers-py", "workers-runtime-sdk"]

[tool.pytest.ini_options]

[tool.ruff]
target-version = "py313"
exclude = []
line-length = 79

[tool.ruff.lint]
select = ["D", "E", "F", "I"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
