[package]
name = "pennysheet-backend"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "domain", "gateway", "infra"]

[dependencies]
axum = "0.8.9"
domain = { version = "0.1.0", path = "domain" }
gateway = { version = "0.1.0", path = "gateway" }
infra = { version = "0.1.0", path = "infra" }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
sea-orm = { version = "2.0.0-rc", features = ["sqlx-sqlite"] }

[workspace.lints.clippy]
empty_docs = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
missing_safety_doc = "warn"
