[package]
name = "pennysheet-backend"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "domain", "gateway", "infra"]

[workspace.dependencies]
tracing = "0.1.41"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
uuid = { version = "1.23.2", features = ["v4"] }

[dependencies]
axum = "0.8.9"
domain = { version = "0.1.0", path = "domain" }
gateway = { version = "0.1.0", path = "gateway" }
infra = { version = "0.1.0", path = "infra" }
serde = { workspace = true }
tokio = { version = "1.52.3", features = ["full"] }
tracing = { workspace = true }
uuid = { workspace = true }
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
tower-http = { version = "0.6.6", features = ["trace"] }

[dev-dependencies]
sea-orm = { version = "2.0.0-rc", features = ["sqlx-sqlite"] }

[workspace.lints.clippy]
empty_docs = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
missing_safety_doc = "warn"
