[package]
name = "pennysheet-backend"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "domain", "gateway", "infra"]

[workspace.dependencies]
chrono = "0.4.45"
dotenvy = "0.15.7"
tracing = "0.1.41"
sea-orm = { version = "2.0.0-rc", features = [
	"sqlx-postgres",
	"runtime-tokio-rustls",
	"macros",
	"schema-sync",
	"entity-registry",
	"with-json",
	"with-uuid",
	"with-chrono",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
strum = { version = "0.28.0", features = ["derive"] }
uuid = { version = "1.23.2", features = ["std", "v4", "v5"] }
regex = "1.12.4"

[dependencies]
axum = "0.8.9"
chrono = { workspace = true }
domain = { version = "0.1.0", path = "domain" }
gateway = { version = "0.1.0", path = "gateway", features = ["with-client"] }
infra = { version = "0.1.0", path = "infra" }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
tokio = { version = "1.52.3", features = ["full"] }
tracing = { workspace = true }
uuid = { workspace = true }
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
tower-http = { version = "0.6.6", features = ["trace", "cors", "fs"] }
axum-extra = { version = "0.12.6", features = ["query"] }

[dev-dependencies]
sea-orm = { version = "2.0.0-rc", features = ["sqlx-sqlite"] }

[workspace.lints.clippy]
empty_docs = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
missing_safety_doc = "warn"
