[package]
name = "pennysheet"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
spacetimedb = { version = "2.2.0", features = ["unstable"] }
log = "0.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[lints.clippy]
empty_docs = "warn"
missing_error_doc = "warn"
missing_panics_doc = "warn"
missing_safety_doc = "warn"
missing_docs_in_private_items = "warn"
