[package]
name = "domain"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.45"
sea-orm = { version = "2.0.0-rc", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150", optional = true }
tracing = { workspace = true }
uuid = { version = "1.23.2", features = ["v4"] }

[features]
default = []
sea-orm-support = ["dep:sea-orm", "dep:serde_json"]

[lints]
workspace = true
