[package]
name = "domain"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { workspace = true }
gateway = { version = "0.1.0", path = "../gateway" }
sea-orm = { version = "2.0.0-rc", optional = true }
serde = { workspace = true }
serde_json = { workspace = true, optional = true }
tracing = { workspace = true }
uuid = { workspace = true }

[features]
default = []
sea-orm-support = ["dep:sea-orm", "dep:serde_json"]

[lints]
workspace = true
