[package]
name = "domain"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { workspace = true }
gateway = { version = "0.1.0", path = "../gateway" }
sea-orm = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true, optional = true }
strum = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[features]
default = []
sea-orm-support = ["dep:sea-orm", "dep:serde_json"]

[lints]
workspace = true
