[package]
name = "gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
jsonwebtoken = { version = "10.4.0", features = ["aws_lc_rs"] }
reqwest = { version = "0.13.4", features = ["json", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[lints]
workspace = true

[dev-dependencies]
httpmock = "0.8.3"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
