[package]
name = "gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { workspace = true }
dotenvy = { workspace = true }
jsonwebtoken = { version = "10.4.0", features = ["aws_lc_rs"] }
reqwest = { version = "0.13.4", features = ["json", "query"] }
sea-orm = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[features]
default = []
with-client = []
sea-orm-support = ["dep:sea-orm"]

[lints]
workspace = true

[dev-dependencies]
httpmock = "0.8.3"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
