[package]
name = "infra"
version = "0.1.0"
edition = "2024"

[dependencies]
domain = { version = "0.1.0", path = "../domain", features = [
	"sea-orm-support",
] }
sea-orm = { version = "2.0.0-rc", features = [
	"sqlx-postgres",
	"runtime-tokio-rustls",
	"macros",
	"schema-sync",
	"entity-registry",
	"with-json",
	"with-uuid",
	"with-chrono",
] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
